--- a/templates/conditional.html
+++ b/templates/conditional.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
+<!doctype html>
 {% if name %}
-    <h1>Hello {{name}}!</h1>
+    <h1>Hello {{ name }}!</h1>
 {% else %}
     <h1>Hello from Napier!</h1>
 {% enfif %}
