--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <body>
     {% with messages = get_flashed_messages() %} 
     {% if message %}
@@ -10,4 +10,4 @@
     {% endif %}
     {% endwith %}
 </body>
-</html>
+</html> -->
