--- a/templates/style.html
+++ b/templates/style.html
@@ -44,3 +44,8 @@
         <script src="{{ url_for('static',filename= 'js/bootstrap.min.js') }}"></script>
     </body>
 </html>
+
+<!-- curl -L -o bootstrap.zip https://github.com/twbs/bootstrap/releases/download/v3.3.5/bootstrap-3.3.5-dist.zip
+unzip bootstrap.zip
+cp -R bootstrap-3.3.5-dist/* . -->
+
