--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <body>
     <p>hello world</p>
     {% with messages = get_flashed_messages() %} 
-    {% if message %}
+    {% if messages %}
     <ul>
         {% for message in messages %}
         <li>{{ message | safe }}</li>
